<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph" app:startDestination="@id/loginFragment">
    <fragment android:id="@+id/loginFragment" android:name="au.edu.vu.artgallery.ui.LoginFragment" android:label="@string/sign_in">
        <action android:id="@+id/action_login_dashboard" app:destination="@id/dashboardFragment" app:popUpTo="@id/loginFragment" app:popUpToInclusive="true" />
    </fragment>
    <fragment android:id="@+id/dashboardFragment" android:name="au.edu.vu.artgallery.ui.DashboardFragment" android:label="@string/collection">
        <argument android:name="keypass" app:argType="string" />
        <action android:id="@+id/action_dashboard_details" app:destination="@id/detailsFragment" />
        <action android:id="@+id/action_logout" app:destination="@id/loginFragment" app:popUpTo="@id/dashboardFragment" app:popUpToInclusive="true" />
    </fragment>
    <fragment android:id="@+id/detailsFragment" android:name="au.edu.vu.artgallery.ui.DetailsFragment" android:label="@string/details">
        <argument android:name="artwork" app:argType="string" />
    </fragment>
</navigation>
